--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Accueil",   '#' %></li>
-        <li><%= link_to "Index des corsaires",   '#' %></li>
-        <li><%= link_to "Nouveau corsaire", '#' %></li>
+        <li><%= link_to "Index des corsaires", corsairs_path %></li>
+        <li><%= link_to "Nouveau corsaire", new_corsair_path %></li>
       </ul>
     </nav>
   </div>
